--- a/app/src/main/res/layout/activity_opciones_inmobiliaria.xml
+++ b/app/src/main/res/layout/activity_opciones_inmobiliaria.xml
@@ -7,26 +7,14 @@
     android:background="@drawable/opciones_fondo"
     tools:context=".OpcionesInmobiliaria">
 
-    <TextView
-        android:id="@+id/titulo0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="11dp"
-        android:text="Tablero Inmobiliaria"
-        android:textColor="@color/black"
-        android:textSize="25sp" />
-
     <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/titulo0"
+        android:layout_width="372dp"
+        android:layout_height="679dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:layout_margin="20dp"
-        android:columnCount="1"
-        >
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:columnCount="1">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardRegistrarPropiedades"
@@ -64,30 +52,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
-            android:layout_gravity="fill"
             android:layout_columnWeight="1"
+            android:layout_gravity="fill"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardUseCompatPadding="true"
-            >
+            app:cardUseCompatPadding="true">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:gravity="center"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_person"
-                    />
+                    android:src="@drawable/ic_person" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mi Perfil"
-                    android:textSize="17sp"
-                    />
+                    android:textSize="17sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -128,30 +115,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
-            android:layout_gravity="fill"
             android:layout_columnWeight="1"
+            android:layout_gravity="fill"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardUseCompatPadding="true"
-            >
+            app:cardUseCompatPadding="true">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:gravity="center"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_exit"
-                    />
+                    android:src="@drawable/ic_exit" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cerrar Sesión"
-                    android:textSize="17sp"
-                    />
+                    android:textSize="17sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </GridLayout>
