--- a/app/src/main/res/layout/activity_propiedades_inmobiliaria.xml
+++ b/app/src/main/res/layout/activity_propiedades_inmobiliaria.xml
@@ -7,16 +7,21 @@
     android:orientation="vertical"
     tools:context=".propiedadesInmobiliaria">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
-    <ImageView
-        android:id="@+id/imgPerfilll"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_gravity="end"
-        android:src="@drawable/ic_person"
-/>
+        <ImageView
+            android:id="@+id/menuupropp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="345dp"
+            android:src="@drawable/menumorado"
+            />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/txtSinProppp"
